--- a/app/views/student_life/school_calendar.haml
+++ b/app/views/student_life/school_calendar.haml
@@ -8,94 +8,120 @@
                         %p
                             %span.label.label-success No school for scholars, staff have professional development (PD)
                             %span.label.label-info No school for scholars or staff
-                        %table.table.table-bordered.table-striped.table-hover
+                        %table.table.table-bordered.table-hover
                             %thead
-                                %th{:width => "175px"} Day
+                                %th{:width => "200px"} Day
                                 %th Description
                             %tbody
                                 -#
                                     %tr
-                                        %td June 17, 2013
+                                        %td June 17, 2014
                                         %td
                                             Lottery -
                                             %a{:href => "#lottery-info", :data => {:toggle => "modal"}} Click for lottery information
                                 %tr.success
-                                    %td August 5-19, 2013
-                                    %td Staff PD
+                                    %td August 4 - 19, 2014
+                                    %td Staff PD - Summer
                                 %tr
-                                    %td August 21, 2013
-                                    %td First day of school for Class 1
+                                    %td August 20, 2014
+                                    %td First day for Kindergarteners
                                 %tr
-                                    %td August 22, 2013
-                                    %td First day of school for Class 2
-                                %tr
-                                    %td August 23, 2013
-                                    %td First day of school for Class 3
-                                %tr
-                                    %td August 26 - 30, 2013
-                                    %td Half day for all scholars
+                                    %td August 25 - 29, 2014
+                                    %td First day for First Graders
                                 %tr.info
-                                    %td September 2, 2013
+                                    %td September 1, 2014
                                     %td Labor Day
                                 %tr
-                                    %td September 3, 2013
-                                    %td First full day
-                                %tr.success
-                                    %td October 4, 2013
-                                    %td Staff PD - No school for scholars
-                                %tr.success
-                                    %td October 16, 2013
-                                    %td Staff PD - No school for scholars
-                                %tr.info
-                                    %td October 17 - 18, 2013
-                                    %td MEA
-                                %tr.success
-                                    %td November 15, 2013
-                                    %td Staff PD - No school for scholars
+                                    %td September 2, 2014
+                                    %td First full day for Kindergarteners and First Graders
                                 %tr
-                                    %td November 21, 2013
+                                    %td September 2 - 5, 2014
                                     %td
-                                        %b Parent-Teacher conferences (12pm early dismissal)
+                                        %b NWEA Testing
+                                %tr
+                                    %td September 2 - 12, 2014
+                                    %td
+                                        %i STEP Round 1
+                                %tr.success
+                                    %td September 12, 2014
+                                    %td Staff PD - STEP
+                                %tr.success
+                                    %td October 15, 2014
+                                    %td Staff PD - Culture
                                 %tr.info
-                                    %td November 27 - 29, 2013
+                                    %td October 16 - 17, 2014
+                                    %td MEA
+                                %tr
+                                    %td November 10 - 14, 2014
+                                    %td
+                                        %i STEP Round 2
+                                %tr
+                                    %td November 20, 2014
+                                    %td
+                                        %b Parent-Teacher Conferences (12pm early dismissal)
+                                %tr.success
+                                    %td November 21, 2014
+                                    %td Staff PD - STEP
+                                %tr.info
+                                    %td November 26 - 28, 2014
                                     %td Thanksgiving
                                 %tr.info
-                                    %td December 23, 2013
+                                    %td December 22, 2014
                                     %td Winter break begins
                                 %tr
-                                    %td January 2, 2014
+                                    %td January 5, 2015
                                     %td School resumes
-                                %tr.info
-                                    %td January 20, 2014
-                                    %td MLK
-                                %tr.success
-                                    %td January 31, 2014
-                                    %td Staff PD - No school for scholars
-                                %tr.info
-                                    %td February 14-18, 2014
-                                    %td Mid-winter recess
-                                %tr.success
-                                    %td March 21, 2014
-                                    %td Staff PD - No school for scholars
-                                %tr.info
-                                    %td March 24 - 28, 2014
-                                    %td Spring break
                                 %tr
-                                    %td April 2, 2014
+                                    %td January 12 - 16, 2015
+                                    %td
+                                        %b NWEA Testing
+                                %tr.info
+                                    %td January 19, 2015
+                                    %td MLK Day
+                                %tr
+                                    %td January 26 - February 6, 2015
+                                    %td
+                                        %i STEP Round 3
+                                %tr.success
+                                    %td February 6, 2015
+                                    %td Staff PD
+                                %tr.info
+                                    %td February 12 - 16, 2015
+                                    %td Mid-winter recess
+                                %tr
+                                    %td March 19, 2015
                                     %td
                                         %b Parent-Teacher conferences (12pm early dismissal)
-                                %tr.success
-                                    %td April 11, 2014
-                                    %td Staff PD - No school for scholars
-                                %tr.success
-                                    %td April 21, 2014
-                                    %td Staff PD - No school for scholars
+                                %tr
+                                    %td March 23 - 27, 2015
+                                    %td
+                                        %i STEP Round 4
                                 %tr.info
-                                    %td May 26, 2014
+                                    %td March 30 - April 6, 2015
+                                    %td Spring Break
+                                %tr.success
+                                    %td April 24, 2015
+                                    %td Staff PD
+                                %tr.info
+                                    %td May 25, 2015
                                     %td Memorial Day
                                 %tr
-                                    %td June 19, 2014
-                                    %td Last day of school for scholars - stepping up
+                                    %td June 1 - 5, 2015
+                                    %td
+                                        %b NWEA Testing
+                                %tr
+                                    %td June 1 - 11, 2015
+                                    %td
+                                        %i STEP Round 5
+                                %tr
+                                    %td June 8 - 11, 2015
+                                    %td 1:30pm early dismissal
+                                %tr
+                                    %td June 11, 2015
+                                    %td Last day of school for scholars - Stepping Up
+                                %tr.success
+                                    %td June 12, 2015
+                                    %td Last day of school for staff
                     .span4
                         %img{:src => asset_path('student_life/calendar.jpg')}
 #lottery-info.modal.hide.fade
