Update mission statement

--- a/app/views/approach/mission.haml
+++ b/app/views/approach/mission.haml
@@ -12,7 +12,7 @@
                             %i
                                 Prodeo Academy is a college
                                 %br
-                                preparatory school that prepares
+                                preparatory school that develops
                                 %br
                                 students to be critical thinkers
                                 %br
