--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -23,20 +23,19 @@
                 %h3 Board Meetings
                 .row-fluid
                     .span12
-                        %p.lead The November 2014 Board Meeting has been changed to Wednesday, December 3 at 5:30pm at Prodeo Academy due to the Thanksgiving holiday.
-                        %br
+                        -#
+                            %p.lead The November 2014 Board Meeting has been changed to Wednesday, December 3 at 5:30pm at Prodeo Academy due to the Thanksgiving holiday.
+                            %br
                         %p
                             Our board meets every other month on the fourth Wednesday at
                             %i 5:30pm
                             at
                             %i 1555 40th Ave NE, Mpls, MN 55421
                         %p
-                            The upcoming agenda and all past board minutes can be viewed on
-                            %a{:href => "https://drive.google.com/folderview?id=0B9F_q1nOg-J-ZDdzQVF3WWRRQU0&usp=sharing#list", :target => "_blank"} Google Docs
-                            by clicking
+                            The upcoming agenda, all board minutes, and our Authorizer's Annual Report can be viewed on
                             = succeed '.' do
-                                %a{:href => "https://drive.google.com/folderview?id=0B9F_q1nOg-J-ZDdzQVF3WWRRQU0&usp=sharing#list", :target => "_blank"} here
-                        %br
+                                %a{:href => "https://drive.google.com/folderview?id=0B9F_q1nOg-J-ZDdzQVF3WWRRQU0&usp=sharing#list", :target => "_blank"} Google Drive
+                        %hr
                         %p
                             %small Minnesota law requires that all chartered schools be authorized by an organization approved by the commissioner of education to be an authorizer.
                         %p
