--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -13,7 +13,7 @@
                             = render :partial => "board", :locals => {:name => "Jill Davies", :role => "Board Secretary, Consultant, Target"}
                         %ul.thumbnails.board
                             = render :partial => "board", :locals => {:name => "Rick Campion", :role => "Co-Founder, Executive Director, Prodeo Academy - Ex-Officio"}
-                            = render :partial => "board", :locals => {:name => "Jeff Kleinfelter", :role => "Managing Director, Head of Global Equities at Piper Jaffray"}
+                            = render :partial => "board", :locals => {:name => "Jeff Klinefelter", :role => "Managing Director, Head of Global Equities at Piper Jaffray"}
                             = render :partial => "board", :locals => {:name => "Mandy Lindstrom", :role => "Teacher, Prodeo Academy"}
                 %h2 Community Engagment Committe
                 .row-fluid
