--- a/app/views/about/staff.haml
+++ b/app/views/about/staff.haml
@@ -25,18 +25,20 @@
                     .span12
                         %ul.thumbnails
                             %li.span3
-                                = render :partial => "staff", :locals => {:name => "Jennifer Christensen", :role => nil}
+                                = render :partial => "staff", :locals => {:name => "Jennifer Christensen", :role => "Kindergarten Teacher"}
                             %li.span3
                                 = render :partial => "staff", :locals => {:name => "Skye Hoekstra", :role => "Kindergarten Teacher"}
                             %li.span3
                                 = render :partial => "staff", :locals => {:name => "Mandy Lindstrom", :role => "Kindergarten Teacher"}
                             %li.span3
-                                = render :partial => "staff", :locals => {:name => "Melissa Lindquist", :role => "First Grade Teacher"}
+                                = render :partial => "staff", :locals => {:name => "Rachel Dietsch", :role => "Kindergarten Teacher"}
                         %ul.thumbnails
                             %li.span3
                                 = render :partial => "staff", :locals => {:name => "Charnay Paris", :role => "First Grade Teacher"}
                             %li.span3
                                 = render :partial => "staff", :locals => {:name => "Ashley Willeck", :role => "First Grade Teacher"}
+                            %li.span3
+                                = render :partial => "staff", :locals => {:name => "Melissa Lindquist", :role => "First Grade Teacher"}
                 %h3 Staff
                 .row-fluid
                     .span12
@@ -49,3 +51,6 @@
                                 = render :partial => "staff", :locals => {:name => "Paris Kyles", :role => "Fitness Coordinator"}
                             %li.span3
                                 = render :partial => "staff", :locals => {:name => "Angela Shepherd", :role => "Family Engagement Social Worker"}
+                        %ul.thumbnails
+                            %li.span3
+                                = render :partial => "staff", :locals => {:name => "Ellie Karr", :role => "Learning Support Teacher"}
