--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -7,7 +7,7 @@
                 .row-fluid
                     .span12
                         %ul.thumbnails.board
-                            = render :partial => "board", :locals => {:name => "Doug Jaeger", :role => "Interim Board Chair, Former CEO of Adolfson & Peterson"}
+                            = render :partial => "board", :locals => {:name => "Doug Jaeger", :role => "Board Chair, Former CEO of Adolfson & Peterson"}
                             = render :partial => "board", :locals => {:name => "Vidal Guzm&aacute;n", :role => "Senior Manager at Public Radio International"}
                             = render :partial => "board", :locals => {:name => "Mark Chronister", :role => "Board Treasurer, Partner at Templeton Laird"}
                             = render :partial => "board", :locals => {:name => "Jill Davies", :role => "Board Secretary, Consultant, Target"}
