--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -7,20 +7,20 @@
                 .row-fluid
                     .span12
                         %ul.thumbnails.board
-                            = render :partial => "board", :locals => {:name => "Doug Jaeger", :role => "Board Chair, Former CEO of Adolfson & Peterson"}
-                            = render :partial => "board", :locals => {:name => "Vidal Guzm&aacute;n", :role => "Senior Manager at Public Radio International"}
-                            = render :partial => "board", :locals => {:name => "Mark Chronister", :role => "Board Treasurer, Partner at Templeton Laird"}
-                            = render :partial => "board", :locals => {:name => "Jill Davies", :role => "Board Secretary, Consultant, Target"}
+                            = render :partial => "person", :locals => {:name => "Doug Jaeger", :role => "Board Chair, Former CEO of Adolfson & Peterson"}
+                            = render :partial => "person", :locals => {:name => "Vidal Guzm&aacute;n", :role => "Senior Manager at Public Radio International"}
+                            = render :partial => "person", :locals => {:name => "Mark Chronister", :role => "Board Treasurer, Partner at Templeton Laird"}
+                            = render :partial => "person", :locals => {:name => "Jill Davies", :role => "Board Secretary, Consultant, Target"}
                         %ul.thumbnails.board
-                            = render :partial => "board", :locals => {:name => "Rick Campion", :role => "Co-Founder, Executive Director, Prodeo Academy - Ex-Officio"}
-                            = render :partial => "board", :locals => {:name => "Jeff Klinefelter", :role => "Managing Director, Head of Global Equities at Piper Jaffray"}
-                            = render :partial => "board", :locals => {:name => "Mandy Lindstrom", :role => "Teacher, Prodeo Academy"}
+                            = render :partial => "person", :locals => {:name => "Rick Campion", :role => "Co-Founder, Executive Director, Prodeo Academy - Ex-Officio", :email => true}
+                            = render :partial => "person", :locals => {:name => "Jeff Klinefelter", :role => "Managing Director, Head of Global Equities at Piper Jaffray"}
+                            = render :partial => "person", :locals => {:name => "Mandy Lindstrom", :role => "Teacher, Prodeo Academy", :email => true}
                 %h2 Community Engagment Committe
                 .row-fluid
                     .span12
                         %ul.thumbnails.board
-                            = render :partial => "board", :locals => {:name => "Kerry Givens", :role => "Executive Director, South Minneapolis YMCA"}
-                            = render :partial => "board", :locals => {:name => "Neda Kellogg", :role => "Founder and CEO, Project Diva"}
+                            = render :partial => "person", :locals => {:name => "Kerry Givens", :role => "Executive Director, South Minneapolis YMCA"}
+                            = render :partial => "person", :locals => {:name => "Neda Kellogg", :role => "Founder and CEO, Project Diva"}
                 %h3 Board Meetings
                 .row-fluid
                     .span12
