--- a/app/views/about/staff.haml
+++ b/app/views/about/staff.haml
@@ -4,8 +4,7 @@
             .content
                 %h2 Co-Founders
                 .row-fluid
-                    .span3
-                        = render :partial => "staff", :locals => {:name => "Rick Campion", :role => "Executive Director"}
+                    = render :partial => "person", :locals => {:name => "Rick Campion", :role => "Executive Director", :email => true}
                     .span9
                         %p.lead Rick has experience in developing successful schools for children in Minneapolis. He was a member of the founding leadership team of Cristo Rey Jesuit High School in the Phillips neighborhood of South Minneapolis and the founding board of directors of Minneapolis College Preparatory. He has 14 years of experience as a teacher, and eight years in school administration.
                         %p.mini-lead.text-info rickcampion@prodeoacademy.org
@@ -16,41 +15,28 @@
                         %p.lead Chancey has taught for ten years at the elementary, middle, and high school levels and has developed school-wide and network-wide curricula at each level. She taught for several years for the Cristo Rey Network in Minneapolis and for the Uncommon Schools Network in NY. She also has her Master's Degree as a Literacy Specialist from Columbia University.
                         %p.mini-lead.text-info chanceyanderson@prodeoacademy.org
                         %p.mini-lead.text-info (347) 982-5061
-
-                    .span3
-                        = render :partial => "staff", :locals => {:name => "Chancey Anderson", :role => "Principal"}
+                    = render :partial => "person", :locals => {:name => "Chancey Anderson", :role => "Principal", :email => true}
                 %br
-                %h3 Classroom Teachers
+                %h3 Teachers
                 .row-fluid
                     .span12
                         %ul.thumbnails
-                            %li.span3
-                                = render :partial => "staff", :locals => {:name => "Jennifer Christensen", :role => "Kindergarten Teacher"}
-                            %li.span3
-                                = render :partial => "staff", :locals => {:name => "Skye Hoekstra", :role => "Kindergarten Teacher"}
-                            %li.span3
-                                = render :partial => "staff", :locals => {:name => "Mandy Lindstrom", :role => "Kindergarten Teacher"}
-                            %li.span3
-                                = render :partial => "staff", :locals => {:name => "Rachel Dietsch", :role => "Kindergarten Teacher"}
+                            = render :partial => "person", :locals => {:name => "Jennifer Christensen", :role => "Kindergarten Teacher", :email => true}
+                            = render :partial => "person", :locals => {:name => "Skye Hoekstra", :role => "Kindergarten Teacher", :email => true}
+                            = render :partial => "person", :locals => {:name => "Mandy Lindstrom", :role => "Kindergarten Teacher", :email => true}
+                            = render :partial => "person", :locals => {:name => "Rachel Dietsch", :role => "Kindergarten Teacher", :email => true}
                         %ul.thumbnails
-                            %li.span3
-                                = render :partial => "staff", :locals => {:name => "Charnay Paris", :role => "First Grade Teacher"}
-                            %li.span3
-                                = render :partial => "staff", :locals => {:name => "Ashley Willeck", :role => "First Grade Teacher"}
-                            %li.span3
-                                = render :partial => "staff", :locals => {:name => "Melissa Lindquist", :role => "First Grade Teacher"}
+                            = render :partial => "person", :locals => {:name => "Charnay Paris", :role => "First Grade Teacher", :email => true}
+                            = render :partial => "person", :locals => {:name => "Ashley Willeck", :role => "First Grade Teacher", :email => true}
+                            = render :partial => "person", :locals => {:name => "Melissa Lindquist", :role => "First Grade Teacher", :email => true}
+                            = render :partial => "person", :locals => {:name => "Camille Sypura", :role => "Science/Social Studies Teacher", :email => true}
+                        %ul.thumbnails
+                            = render :partial => "person", :locals => {:name => "Paris Kyles", :role => "Fitness Coordinator", :email => true}
+                            = render :partial => "person", :locals => {:name => "Eleanor Karr", :role => "Learning Support Teacher", :email => true}
                 %h3 Staff
                 .row-fluid
                     .span12
                         %ul.thumbnails
-                            %li.span3
-                                = render :partial => "staff", :locals => {:name => "Erica Jaastad", :role => "Academic Dean"}
-                            %li.span3
-                                = render :partial => "staff", :locals => {:name => "Camille Sypura", :role => "Science/Social Studies Teacher"}
-                            %li.span3
-                                = render :partial => "staff", :locals => {:name => "Paris Kyles", :role => "Fitness Coordinator"}
-                            %li.span3
-                                = render :partial => "staff", :locals => {:name => "Angela Shepherd", :role => "Family Engagement Social Worker"}
-                        %ul.thumbnails
-                            %li.span3
-                                = render :partial => "staff", :locals => {:name => "Ellie Karr", :role => "Learning Support Teacher"}
+                            = render :partial => "person", :locals => {:name => "Erica Jaastad", :email => true}
+                            = render :partial => "person", :locals => {:name => "Angela Shepherd", :email => true}
+                            = render :partial => "person", :locals => {:name => "Adi Perez", :email => true}
