Change staff page layout

--- a/app/views/about/staff.haml
+++ b/app/views/about/staff.haml
@@ -33,10 +33,18 @@
                         %ul.thumbnails
                             = render :partial => "person", :locals => {:name => "Paris Kyles", :role => "Fitness Coordinator", :email => true}
                             = render :partial => "person", :locals => {:name => "Eleanor Karr", :role => "Learning Support Teacher", :email => true}
-                %h3 Staff
+                %h3 Academic Dean
                 .row-fluid
                     .span12
                         %ul.thumbnails
                             = render :partial => "person", :locals => {:name => "Erica Jaastad", :email => true}
+                %h3 Social Worker
+                .row-fluid
+                    .span12
+                        %ul.thumbnails
                             = render :partial => "person", :locals => {:name => "Angela Shepherd", :email => true}
+                %h3 Office Administrator
+                .row-fluid
+                    .span12
+                        %ul.thumbnails
                             = render :partial => "person", :locals => {:name => "Adi Perez", :email => true}
