--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -50,7 +50,7 @@
         %footer
             .container
                 .pull-left
-                    %span &copy; Copyright 2013 Prodeo Academy
+                    %span &copy; Copyright #{Time.now.year} Prodeo Academy
 
                 .pull-right
                     %span 1555 40th Ave NE Minneapolis 55421
