--- a/app/views/about/staff.haml
+++ b/app/views/about/staff.haml
@@ -12,7 +12,7 @@
                 %br
                 .row-fluid
                     .span9
-                        %p.lead Chancey has taught for ten years at the elementary, middle, and high school levels and has developed school-wide and network-wide curricula at each level. She taught for several years for the Cristo Rey Network in Minneapolis and for the Uncommon Schools Network in NY. She also has her Master's Degree as a Literacy Specialist from Columbia University.
+                        %p.lead Chancey has taught for ten years at the elementary, middle, and high school levels and has developed school-wide and network-wide curricula at each level. She taught for several years for the Cristo Rey Network in Minneapolis and for the Uncommon Schools Network in NY. She is also working on her degree as a Literacy Specialist from Columbia University.
                         %p.mini-lead.text-info chanceyanderson@prodeoacademy.org
                         %p.mini-lead.text-info (347) 982-5061
                     = render :partial => "person", :locals => {:name => "Chancey Anderson", :role => "Principal", :email => true}
