--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -7,13 +7,13 @@
                 .row-fluid
                     .span12
                         %ul.thumbnails.board
-                            = render :partial => "person", :locals => {:name => "Doug Jaeger", :role => "Board Chair, Former CEO of Adolfson & Peterson"}
-                            = render :partial => "person", :locals => {:name => "Vidal Guzm&aacute;n", :role => "Senior Manager at Public Radio International"}
-                            = render :partial => "person", :locals => {:name => "Mark Chronister", :role => "Board Treasurer, Partner at Templeton Laird"}
-                            = render :partial => "person", :locals => {:name => "Jill Davies", :role => "Board Secretary, Consultant, Target"}
+                            = render :partial => "person", :locals => {:name => "Doug Jaeger", :role => "Board Chair, Former CEO of Adolfson & Peterson", :email => true}
+                            = render :partial => "person", :locals => {:name => "Vidal Guzman", :role => "Senior Manager at Public Radio International", :email => true}
+                            = render :partial => "person", :locals => {:name => "Mark Chronister", :role => "Board Treasurer, Partner at Templeton Laird", :email => true}
+                            = render :partial => "person", :locals => {:name => "Jill Davies", :role => "Board Secretary, Consultant, Target", :email => true}
                         %ul.thumbnails.board
                             = render :partial => "person", :locals => {:name => "Rick Campion", :role => "Co-Founder, Executive Director, Prodeo Academy - Ex-Officio", :email => true}
-                            = render :partial => "person", :locals => {:name => "Jeff Klinefelter", :role => "Managing Director, Head of Global Equities at Piper Jaffray"}
+                            = render :partial => "person", :locals => {:name => "Jeff Klinefelter", :role => "Managing Director, Head of Global Equities at Piper Jaffray", :email => true}
                             = render :partial => "person", :locals => {:name => "Mandy Lindstrom", :role => "Teacher, Prodeo Academy", :email => true}
                 %h2 Community Engagment Committe
                 .row-fluid
