--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -6,6 +6,12 @@
         = javascript_include_tag "application"
     %body
         #wrap
+            #benefit
+                .container
+                    .row
+                        .span12.center
+                            %a{:href => "http://events.r20.constantcontact.com/register/event?oeidk=a07eatysc6r6531f1c0&llr=u9tlduoab", :target => "_blank"}
+                                %h2 Register for the Prodeo Academy Benefit and Dinner
             #top
             .container#header
                 .row
