Update board page

--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -25,7 +25,7 @@
                 .row-fluid
                     .span5
                         %p
-                            Our board meets on the fourth Wednesday of every other month at
+                            Our board meets on the fourth Wednesday of every other month (January, March, May, July, September, and November) at
                             %i 5:30pm.
                         %p
                             Our mission committee meets on the third Wednesday of every month at
