--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -34,6 +34,8 @@
                             Our finance committee meets on the third Tuesday of every month at
                             %i 5:30pm.
                     .span7
+                        %p Next Governance Committee Meeting: June 8th at 6:30pm
+                        %p Notice of Prodeo Academy School Board Elections: Parents/Legal Guardians, Faculty/Staff, and Board Members may vote between 7:30am and 6:00pm on June 8th
                         %p
                             All meetings are held at Prodeo Academy at
                             %i 1555 40th Ave NE, Mpls, MN 55421.
