--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -6,7 +6,7 @@
         = javascript_include_tag "application"
     %body
         #wrap
-            #benefit
+            -#benefit
                 .container
                     .row
                         .span12.center
