--- a/app/views/about/_person.haml
+++ b/app/views/about/_person.haml
@@ -5,7 +5,7 @@
             %h4= name.html_safe
             - if local_assigns.has_key? :role
                 %small= role
-            - if local_assigns.has_key? :email
+            - if local_assigns.has_key? :email && email
                 %small
                     - email = email(name)
                     %a{:href => "mailto:#{email}"}= truncate email, :length => 26
