--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -15,9 +15,9 @@
                             = render :partial => "person", :locals => {:name => "Rick Campion", :role => "Co-Founder, Executive Director, Prodeo Academy - Ex-Officio", :email => true}
                             = render :partial => "person", :locals => {:name => "Jeff Klinefelter", :role => "Managing Director, Head of Global Equities at Piper Jaffray", :email => true}
                             = render :partial => "person", :locals => {:name => "Mandy Lindstrom", :role => "Teacher, Prodeo Academy", :email => true}
-                            = render :partial => "person", :locals => {:name => "Lewis Remele", :role => "", :email => false}
+                            = render :partial => "person", :locals => {:name => "Lewis Remele", :role => ""}
                         %ul.thumbnails.board
-                            = render :partial => "person", :locals => {:name => "Maggie Skrypek", :role => "", :email => false}
+                            = render :partial => "person", :locals => {:name => "Maggie Skrypek", :role => ""}
                 %h2 Community Engagment Committe
                 .row-fluid
                     .span12
