Add annual meeting info

--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -26,6 +26,11 @@
                             = render :partial => "person", :locals => {:name => "Neda Kellogg", :role => "Founder and CEO, Project Diva"}
                 %h3 Board Meetings
                 .row-fluid
+                    .span12
+                        %p.center
+                            %i The Board of Directors Annual Meeting will take place on Wednesday, July 22nd from 4:30pm - 7:00pm.
+                        %br
+                .row-fluid
                     .span5
                         %p
                             Our board meets on the fourth Wednesday of every other month (January, March, May, July, September, and November) at
