--- a/app/views/about/staff.haml
+++ b/app/views/about/staff.haml
@@ -35,7 +35,7 @@
                         %ul.thumbnails
                             = render :partial => "person", :locals => {:name => "Amanda Laurent", :role => "First Grade Teacher", :email => true}
                             = render :partial => "person", :locals => {:name => "Rachel Dietsch", :role => "First Grade Teacher", :email => true}
-                            = render :partial => "person", :locals => {:name => "Nicole Black", :role => "First Grade Team Chair", :email => true}
+                            = render :partial => "person", :locals => {:name => "Nicole Black", :role => "First Grade Teacher", :email => true}
                             = render :partial => "person", :locals => {:name => "Skye Hoekstra", :role => "Second Grade Team Chair", :email => true}
                         %ul.thumbnails
                             = render :partial => "person", :locals => {:name => "Ashley Denaway", :role => "Second Grade Teacher", :email => true}
