Update board page

--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -26,12 +26,7 @@
                             = render :partial => "person", :locals => {:name => "Neda Kellogg", :role => "Founder and CEO, Project Diva"}
                 %h3 Board Meetings
                 .row-fluid
-                    .span12
-                        %p.center
-                            %i The Board of Directors Annual Meeting will take place on Wednesday, July 22nd from 4:30pm - 7:00pm.
-                        %br
-                .row-fluid
-                    .span5
+                    .span6
                         %p
                             Our board meets on the fourth Wednesday of every other month (January, March, May, July, September, and November) at
                             %i 5:30pm.
@@ -41,9 +36,10 @@
                         %p
                             Our finance committee meets on the third Tuesday of every month at
                             %i 5:30pm.
-                    .span7
-                        %p Next Governance Committee Meeting: June 8th at 6:30pm
-                        %p Notice of Prodeo Academy School Board Elections: Parents/Legal Guardians, Faculty/Staff, and Board Members may vote between 7:30am and 6:00pm on June 8th.
+                    .span6
+                        %p
+                            Out governance committee meets on the second Tuesday of every other month  (February, April, June, August, October, December) at
+                            %i 11:30am.
                         %p
                             All meetings are held at Prodeo Academy at
                             %i 1555 40th Ave NE, Mpls, MN 55421.
