--- a/app/views/about/staff.haml
+++ b/app/views/about/staff.haml
@@ -36,14 +36,13 @@
                             = render :partial => "person", :locals => {:name => "Amanda Laurent", :role => "First Grade Teacher", :email => true}
                             = render :partial => "person", :locals => {:name => "Rachel Dietsch", :role => "First Grade Teacher", :email => true}
                             = render :partial => "person", :locals => {:name => "Nicole Black", :role => "First Grade Teacher", :email => true}
-                            = render :partial => "person", :locals => {:name => "Skye Hoekstra", :role => "Second Grade Team Chair", :email => true}
+                            = render :partial => "person", :locals => {:name => "Skye Hoekstra", :role => "Second Grade Teacher / Team Chair", :email => true}
                         %ul.thumbnails
                             = render :partial => "person", :locals => {:name => "Ashley Denaway", :role => "Second Grade Teacher", :email => true}
                             = render :partial => "person", :locals => {:name => "Brittany Gorr", :role => "Second Grade Teacher", :email => true}
                             = render :partial => "person", :locals => {:name => "Melissa Lindquist", :role => "ELL Teacher", :email => true}
                             = render :partial => "person", :locals => {:name => "Mandy Lindstrom", :role => "Learning Support Teacher", :email => true}
                         %ul.thumbnails
-                            = render :partial => "person", :locals => {:name => "Cameron Hodges", :role => "Fitness Teacher", :email => true}
                             = render :partial => "person", :locals => {:name => "Tiffany Graham", :role => "Educational Assistant", :email => true}
                             = render :partial => "person", :locals => {:name => "Shanequa Cook", :role => "Educational Assistant", :email => true}
                 %h3 Staff
